virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-go
  namespace: sample 
spec:
  hosts:
    - "*"
  gateways:
    - knative-serving/knative-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: helloworld-go.default.svc.cluster.local
            port:
              number: 8
